package com.prj.controller;

import java.util.List;

import com.prj.common.core.domain.AjaxResult;
import com.prj.common.core.page.TableDataInfo;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.security.access.prepost.PreAuthorize;
import org.springframework.validation.annotation.Validated;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.PostMapping;
import org.springframework.web.bind.annotation.PutMapping;
import org.springframework.web.bind.annotation.DeleteMapping;
import org.springframework.web.bind.annotation.PathVariable;
import org.springframework.web.bind.annotation.RequestBody;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;
import com.prj.domain.EmployeeKpi;
import com.prj.service.IEmployeeKpiService;

import jakarta.validation.Valid;


// [P0-FIX] 添加 @Validated 开启控制器级别输入校验
@Validated
@RestController
@RequestMapping("/employee_kpi")
public class EmployeeKpiController extends BaseController
{
    @Autowired
    private IEmployeeKpiService employeeKpiService;

    // [P1-FIX] 添加权限注解，写操作需要 ADMIN 角色

    /** 查询员工评价管理列表     */
    @PreAuthorize("isAuthenticated()")
    @GetMapping("/list")
    public TableDataInfo list(EmployeeKpi employeeKpi)
    {
        startPage();
        List<EmployeeKpi> list = employeeKpiService.selectEmployeeKpiList(employeeKpi);
        return getDataByPage(list);
    }

    /** 获取员工评价管理详细信息     */
    @PreAuthorize("isAuthenticated()")
    @GetMapping(value = "/{id}")
    public AjaxResult getInfo(@PathVariable("id") Long id)
    {
        return AjaxResult.success(employeeKpiService.selectEmployeeKpiById(id));
    }

    /** 新增员工评价管理     */
    @PreAuthorize("hasRole('ADMIN')")
    @PostMapping
    // [P0-FIX] @Valid 触发 EmployeeKpi 上的 JSR-303 约束校验
    public AjaxResult add(@Valid @RequestBody EmployeeKpi employeeKpi)
    {
        return toAjax(employeeKpiService.insertEmployeeKpi(employeeKpi));
    }

    /** 修改员工评价管理     */
    @PreAuthorize("hasRole('ADMIN')")
    @PutMapping
    // [P0-FIX] @Valid 触发 EmployeeKpi 上的 JSR-303 约束校验
    public AjaxResult edit(@Valid @RequestBody EmployeeKpi employeeKpi)
    {
        return toAjax(employeeKpiService.updateEmployeeKpi(employeeKpi));
    }

    /** 删除员工评价管理     */
    @PreAuthorize("hasRole('ADMIN')")
    @DeleteMapping("/{ids}")
    public AjaxResult remove(@PathVariable Long[] ids)
    {
        return toAjax(employeeKpiService.deleteEmployeeKpiByIds(ids));
    }
}
